tests/Tuc/Fixtures/errors/DoWithoutACaller.tuc
tuc parse error test
participants
    GenericService parts

do well.. nothing
